管理者ホーム、管理者のユーザー検索、管理者の施設追加機能作成

--- a/app/views/endusers/registrations/new.html.erb
+++ b/app/views/endusers/registrations/new.html.erb
@@ -14,6 +14,11 @@
   </div>
 
   <div class="field">
+    <%= f.label :電話番号 %><br />
+    <%= f.text_field :tell, autofocus: true %>
+  </div>
+
+  <div class="field">
     <%= f.label :郵便番号 %><br />
     <%= f.text_field :postal_code, autofocus: true %>
   </div>
