--- a/app/views/admins/top.html.erb
+++ b/app/views/admins/top.html.erb
@@ -3,7 +3,7 @@
 		<h2>管理者ホーム画面</h2>
 			<table class="table table-striped">
 				<tr>
-					<td><%= link_to "ユーザー情報編集", admin_enduser_path %></td>
+					<td><%= link_to "ユーザー情報編集", endusers_path %></td>
 				</tr>
 				<tr>
 					<td><%= link_to "施設情報編集", admin_facility_path %></td>
