--- a/app/assets/stylesheets/facilities.scss
+++ b/app/assets/stylesheets/facilities.scss
@@ -1,3 +1,77 @@
 // Place all the styles related to the facilities controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+// facility create //
+.facility_add_image{
+	padding: 5px 5px;
+    margin-bottom: 5px;
+    font-weight: bold;
+    border: solid 1px #000000;
+}
+
+.room_add_image{
+	padding: 5px 5px;
+    margin-bottom: 5px;
+    font-weight: bold;
+    border: solid 1px #000000;
+}
+
+//
+
+// facility index //
+
+.clearfix::after {
+  content: "";
+  display: block;
+  clear: both;
+  padding: 30px;
+}
+
+.search-facility{
+	padding-top: 30px;
+	display: flex;
+
+}
+
+.facility-image{
+	width: 60%;
+	float: left;
+}
+
+.facility-info{
+	width: 40%;
+	float: left;
+	margin: 5px;
+	position: relative;
+	background-color: #f5f5f5;
+}
+
+.facility-name{
+	padding: 20px 0 80px 30px;
+	color: #000000;
+	font-family: serif;
+}
+
+.price{
+	padding: 20px 0 5px 30px;
+}
+
+.facility-price{
+	padding: 0px 0 80px 30px;
+	font-family: serif;
+}
+
+.facility-details{
+	padding: 20px 0 0 30px;
+}
+
+.link-details{
+	display: inline-block;
+  	padding: 0.5em 3em;
+  	text-decoration: none;
+  	background: #191970;
+  	color: #ffffff;
+  	border-bottom: solid 4px #627295;
+  	border-radius: 3px;
+}
