--- a/app/views/endusers/index.html.erb
+++ b/app/views/endusers/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 	<h2>ユーザー検索</h2>
 		<div class="row">
-			<%= search_form_for(@q, url:admin_enduser_path) do |f| %>
+			<%= search_form_for(@q, url:endusers_path) do |f| %>
 				<%= f.label :name, "名前" %>
 				<%= f.search_field :name_cont %>
 				<%= f.submit "検索" %>
