--- a/app/views/admins/top.html.erb
+++ b/app/views/admins/top.html.erb
@@ -11,6 +11,12 @@
 				<tr>
 					<td><%= link_to "新規施設追加", new_facility_path %></td>
 				</tr>
+				<tr>
+					<td><%= link_to "特集コーナー登録", new_feature_path %></td>
+				</tr>
+				<tr>
+					<td><%= link_to "特集コーナー削除", features_path %></td>
+				</tr>
 			</table>
 	</div>
 </div>
