--- a/app/views/facilities/_image_fields.html.erb
+++ b/app/views/facilities/_image_fields.html.erb
@@ -2,7 +2,7 @@
 	<div class="form-group">
 		<div class="facility_add_image">
 			<h4>施設画像追加</h4>
-			<%= f.attachment_field :image, multiple: true %>
+			<%= f.attachment_field :image %>
 			<%= link_to_remove_association "施設の画像を削除する", f %>
 		</div>
 	</div>
