--- a/app/views/facilities/_room_image_fields.html.erb
+++ b/app/views/facilities/_room_image_fields.html.erb
@@ -2,7 +2,7 @@
 	<div class="form-group">
 		<div class="room_add_image">
 			<h4>部屋画像追加</h4>
-			<%= f.attachment_field :image, multiple: true %>
+			<%= f.attachment_field :image %>
 			<%= link_to_remove_association "部屋画像削除する", f %>
 		</div>
 	</div>
