--- a/app/views/facilities/show.html.erb
+++ b/app/views/facilities/show.html.erb
@@ -3,16 +3,81 @@
 		<div class="col-xs-2">
 		</div>
 		<div class="col-xs-10">
-			<h1><%= @facility.name %></h1>
-				<% @image.each do |image| %>
-					<%= attachment_image_tag image, :image, :fill, 778, 525 %>
+			<nav class="facility-list">
+				<ul class="facility-list-in">
+					<li class="facility-list-item"><%= link_to("施設の特徴", { anchor: "facility-characteristic" }) %></li>
+					<li class="facility-list-item"><%= link_to("部屋情報", { anchor: "room-information-title" }) %></li>
+					<li class="facility-list-item"><%= link_to("施設情報", { anchor: "facility-information-title" }) %></li>
+					<li class="facility-list-item"><%= link_to("予約", { anchor: "reservation" }) %></li>
+				</ul>
+			</nav>
+			<h1 class="facility-show-title"><%= @facility.name %></h1>
+			<div class="bxslider">
+				<% @facility.images.each do |image| %>
+					<%= attachment_image_tag image, :image, class: "bxslider-image" %>
 				<% end %>
-			<div class="facility-explanation">
-				<h3>施設の特徴</h3>
-				<p><%= @facility.explanation %></p>
 			</div>
-			<div class="facility-room">
+			<div class="facility-explanation">
+				<h3 id="facility-characteristic">施設の特徴</h3>
+				<p><%= simple_format(@facility.explanation) %></p>
+			</div>
+			<div class="row facility-room">
+				<h3 id="room-information-title">部屋情報</h3>
+				<div class="room-box">
+					<% @facility.rooms.each do |room| %>
+						<div class="room-box-item">
+							<div class="col-xs-3 show-room-image">
+								<% room.room_images.each do |image| %>
+									<% attachment_image_tag image, :image %>
+								<% end %>
+							</div>
+							<table class="col-xs-7 show-room-plan">
+								<tr>
+									<th>部屋詳細</th><th>宿泊可能人数</th><th>料金</th>
+								</tr>
+								<tr>
+									<td><%= room.information %></td><td><%= room.capacity %></td><td><%= room.price %></td>
+								</tr>
+							</table>
+							<div class="col-xs-2 room-reservation">
+									<p class="link-modal">予約情報入力</p>
+							</div>
+						</div>
+							<div class="overlay">
+								<div class="modal">
+									<%= form_for @reservation, url: new_reservation_path(room.id) do |r| %>
+										<div class="modal-item">
+											<%= r.label :宿泊人数 %>
+											<%= r.number_field :people, {class: 'class_name'} %>
+										</div>
+										<div class="modal-item">
+											<%= r.label :チェックイン時間　%>
+											<%= r.date_select :start_on %>
+										</div>
+										<div class="modal-item">
+											<%= r.label :チェックアウト時間　%>
+											<%= r.date_select :end_on %>
+										</div>
+										<%= r.submit "予約画面へ" %>
+									<% end %>
+									<div class="close">閉じる</div>
+								</div>
+							</div>
+					<% end %>
+				</div>
+			</div>
+			<div class="facility-information">
+				<h3 id="facility-information-title">施設情報</h3>
+				<dl class="information-field">
+						<dt class="infromation-title">施設名</dt>
+							<dd class="information-item"><%= @facility.name %></dd>
+						<dt class="infromation-title">住所</dt>
+							<dd class="information-item"><%= @facility.address %></dd>
+						<dt class="infromation-title">チェックイン・チェックアウト時間</dt>
+							<dd class="information-item"><%= @facility.time %></dd>
+				</dl>
 			</div>
 		</div>
 	</div>
 </div>
+
