--- a/app/assets/stylesheets/endusers.scss
+++ b/app/assets/stylesheets/endusers.scss
@@ -1,3 +1,29 @@
 // Place all the styles related to the endusers controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.signup-title{
+	margin: 30px 0;
+	font-family: serif;
+}
+
+.signup-field{
+	padding: 10px;
+	margin-top: 20px;
+	margin-bottom: 10px;
+	border: 1px solid #a52a2a;
+	border-radius: 10px;
+	text-align:center;
+	background-color: #f5f5f5;
+}
+
+.signup-item{
+	margin-bottom: 15px;
+	font-family: serif;
+}
+
+.signup-actions{
+	margin-bottom: 15px;
+	font-family: serif;
+}
+
