--- a/app/assets/stylesheets/facilities.scss
+++ b/app/assets/stylesheets/facilities.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-// facility create //
+// facilities new //
 .facility_add_image{
 	padding: 5px 5px;
     margin-bottom: 5px;
@@ -17,53 +17,60 @@
     border: solid 1px #000000;
 }
 
+.input-mysize-explanation{
+  	width: 600px;
+  	height: 250px !important;
+}
+
 //
 
-// facility index //
+// facilities index //
 
-.clearfix::after {
-  content: "";
-  display: block;
-  clear: both;
-  padding: 30px;
+.search-item{
+	height: 100%;
 }
 
-.search-facility{
-	padding-top: 30px;
-	display: flex;
-
+.result-search .facility-image-index{
+	padding: 0;
 }
 
-.facility-image{
-	width: 60%;
-	float: left;
+.result-search{
+	padding-bottom: 50px;
+	height: 100%;
 }
 
-.facility-info{
-	width: 40%;
-	float: left;
-	margin: 5px;
-	position: relative;
+.index-title{
+	font-family: serif;
+	padding: 20px 0;
+}
+
+.facility-image-item{
+	width: 100%;
+	background-size: cover;
+}
+
+.facility-info-index{
+	width: 100%;
+	height: 100%;
 	background-color: #f5f5f5;
 }
 
-.facility-name{
-	padding: 20px 0 80px 30px;
+.facility-name-index{
 	color: #000000;
 	font-family: serif;
 }
 
 .price{
-	padding: 20px 0 5px 30px;
-}
-
-.facility-price{
-	padding: 0px 0 80px 30px;
 	font-family: serif;
 }
 
+.facility-price-index{
+	font-family: serif;
+
+}
+
 .facility-details{
-	padding: 20px 0 0 30px;
+	padding: 20px 0;
 }
 
 .link-details{
@@ -74,4 +81,199 @@
   	color: #ffffff;
   	border-bottom: solid 4px #627295;
   	border-radius: 3px;
+  	font-family: serif;
+}
+
+// facilities home //
+
+.home-search{
+	font-family: serif;
+}
+
+.home-area{
+	width: 	100%;
+	heigth: 40%;
+	padding: 0;
+	margin: none;
+}
+
+.home-field{
+	width: 100%;
+	height: 100%;
+}
+
+.home-image{
+	heigtht: 600px;
+	width: 100%;
+}
+
+.center-image{
+	width: 100%;
+	background-position: center;
+}
+
+.selections{
+	text-align: center;
+	font-family: serif;
+	padding: 30px 0;
+}
+
+.features-item{
+	width: 50%;
+	float: left;
+	padding-bottom: 20px;
+}
+
+
+// facility index //
+.facility-list{
+	padding-top: 30px;
+	text-align: center;
+}
+
+.facility-list-in{
+	margin: 0 ;
+	padding: 0 ;
+}
+
+.facility-list-item{
+	list-style: none;
+	display: inline-block;
+	width: 10%;
+	min-width: 90px;
+	font-family: serif;
+}
+
+.facility-list-item:not(:last-child){
+	border-right:2px solid #ddd;
+}
+
+.facility-list a{
+	text-decoration: none;
+	color: #333;
+}
+
+.facility-list a.current{
+	color: #a52a2a;
+	border-bottom:2px solid #a52a2a;
+}
+
+.facility-list a:hover{
+	color: #a52a2a;
+	border-bottom:2px solid #a52a2a;
+}
+
+.facility-show-title{
+	font-family: serif;
+}
+
+#map{
+	height: 200px;
+	width: 200px;
+}
+
+.feature-input{
+	font-family: serif;
+}
+
+// facility show //
+
+#facility-characteristic{
+	font-family: serif;
+	padding-top: 20px;
+}
+
+.information-table{
+	width: 100%;
+}
+
+.information-table-item{
+	width: 100%;
+}
+
+.facility-information{
+	font-family: serif;
+	padding-top: 15px;
+}
+
+.infromation-title{
+	padding: 20px 0 5px 0;
+}
+.information-item{
+	padding-bottom: 10px;
+	border-bottom: 1px solid #efefef;
+}
+
+.bx-wrapper{
+	width: 100%;
+}
+
+
+.link-modal{
+  font-size: 14px;
+  text-align: center;
+  cursor: pointer;
+  color: #337ab7;
+  font-family: serif;
+}
+
+.overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background: #696969;
+}
+
+.modal {
+  display: none;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 2;
+  width: 80%;
+  height: 600px;
+  padding-top: 70px;
+  margin: auto;
+  background: #fff;
+  border-radius: 5px;
+}
+
+.modal .modal-item {
+  font-size: 20px;
+  font-weight: normal;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.modal-item{
+	z-index: 3;
+}
+
+.modal .close {
+  text-align: center;
+}
+
+.room-box-item{
+	border-bottom: 1px solid #efefef;
+	padding: 10px 0;
+	height: 100px;
+}
+
+#room-information-title{
+	font-family: serif;
+	padding-bottom: 20px;
+}
+
+.explanation{
+	font-family: serif;
+}
+
+.show-room-plan{
+	font-family: serif;
 }
