--- a/app/views/endusers/registrations/new.html.erb
+++ b/app/views/endusers/registrations/new.html.erb
@@ -1,54 +1,60 @@
-<h2>新規会員登録</h2>
+<div class="container">
+  <h2 class="signup-title">新規会員登録</h2>
+  <div class="row signup-field">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :名前 %><br />
-    <%= f.text_field :name, autofocus: true %>
+    <div class="signup-item">
+      <%= f.label :名前 %><br />
+      <%= f.text_field :name, autofocus: true %>
+    </div>
+
+    <div class="signup-item">
+      <%= f.label :"なまえ(かな)" %><br />
+      <%= f.text_field :name_kana, autofocus: true %>
+    </div>
+
+    <div class="signup-item">
+      <%= f.label :電話番号 %><br />
+      <%= f.text_field :tell, autofocus: true %>
+    </div>
+
+    <div class="signup-item">
+      <%= f.label :郵便番号 %><br />
+      <%= f.text_field :postal_code, autofocus: true %>
+    </div>
+
+    <div class="signup-item">
+      <%= f.label :住所 %><br />
+      <%= f.text_field :address, autofocus: true %>
+    </div>
+
+    <div class="signup-item">
+      <%= f.label :メールアドレス %><br />
+      <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    </div>
+
+    <div class="signup-item">
+      <%= f.label :パスワード %>
+      <% if @minimum_password_length %>
+      <em>(最小<%= @minimum_password_length %> 文字)</em>
+      <% end %><br />
+      <%= f.password_field :password, autocomplete: "new-password" %>
+    </div>
+
+    <div class="signup-item">
+      <%= f.label :確認用パスワード %><br />
+      <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    </div>
+
+    <div class="signup-actions">
+      <%= f.submit "会員登録" %>
+    </div>
+  <% end %>
+
+    <div class="signup-login">
+      <%= render "endusers/shared/links" %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :なまえ %><br />
-    <%= f.text_field :name_kana, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :電話番号 %><br />
-    <%= f.text_field :tell, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :郵便番号 %><br />
-    <%= f.text_field :postal_code, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :住所 %><br />
-    <%= f.text_field :address, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :メールアドレス %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :パスワード %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :確認用パスワード %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "会員登録" %>
-  </div>
-<% end %>
-
-<%= render "endusers/shared/links" %>
+</div>
