--- a/app/views/facilities/edit.html.erb
+++ b/app/views/facilities/edit.html.erb
@@ -1,21 +1,36 @@
 <div class="container">
 	<h1>施設情報編集</h1>
 	<div class="row">
+			<table class="table table-striped">
 			<%= form_for @facility do |s| %>
-				<div class="row">
-					<h4>施設名</h4>
-						<%= s.text_field :name %>
-					<h4>郵便番号</h4>
-						<%= s.text_field :postal_code %>
-					<h4>施設住所</h4>
-						<%= s.text_field :address %>
-					<h4>電話番号</h4>
-						<%= s.text_field :phone %>
-					<h4>メールアドレス</h4>
-						<%= s.text_field :email %>
-					<h4>地域</h4>
-						<%= s.text_field :region %>
-				</div>
+				<tr>
+					<th>施設名</th><th><%= s.text_field :name %></th>
+				</tr>
+				<tr>
+					<th>郵便番号</th><th><%= s.text_field :postal_code %></th>
+				</tr>
+				<tr>
+					<th>施設住所</th><th><%= s.text_field :address %></th>
+				</tr>
+				<tr>
+					<th>電話番号</th><th><%= s.text_field :phone %></th>
+				</tr>
+				<tr>
+					<th>メールアドレス</th><th><%= s.text_field :email %></th>
+				</tr>
+				<tr>
+					<th>地域</th><th><%= s.text_field :region %></th>
+				</tr>
+				<tr>
+					<th>施設情報</th><th><%= s.text_area :explanation, class:"input-mysize-explanation" %></th>
+				</tr>
+				<tr>
+					<th>チェックイン/チェックアウト時間</th><th><%= s.text_field :time %></th>
+				</tr>
+				<tr>
+					<th>特集用</th><th><%= s.text_field :heading %></th>
+				</tr>
+			</table>
 				<div class="image">
 					<%= s.fields_for :images do |f| %>
 						<%= render 'image_fields', f:f %>
