--- a/app/views/admins/top.html.erb
+++ b/app/views/admins/top.html.erb
@@ -9,7 +9,7 @@
 					<td><%= link_to "施設情報編集", admin_facility_path %></td>
 				</tr>
 				<tr>
-					<td><%= link_to "新規施設追加", new_facility_path %></td>
+					<td><%= link_to "新規施設追加", admins_index_path %></td>
 				</tr>
 				<tr>
 					<td><%= link_to "特集コーナー登録", new_feature_path %></td>
