--- a/app/views/owners/owner_home.html.erb
+++ b/app/views/owners/owner_home.html.erb
@@ -3,7 +3,7 @@
 	<div class="row">
 		<table class="table table-striped">
 			<tr>
-				<th>予約確認</th>
+				<th><%= link_to "予約確認", owners_path %></th>
 			</tr>
 		</table>
 	</div>
