--- a/app/views/endusers/show.html.erb
+++ b/app/views/endusers/show.html.erb
@@ -1,4 +1,5 @@
-<div class="container">
+<div class="container mypage-area">
+	<h2>お客様情報</h2>
 	<div class="row">
 		<table class="table table-striped">
 			<tbody>
@@ -19,6 +20,20 @@
 				</tr>
 			</tbody>
 		</table>
+	</div>
+	<h2>予約履歴</h2>
+	<div class="row">
+		<% @reservation.each do |f| %>
+			<table class="table table-striped">
+				<tr>
+					<th>ご予約日</th><th><%= f.created_at.strftime("%Y-%m-%d") %></th>
+				</tr>
+				<tr>
+					<th>施設名</th><th><%= f.room.facility.name %></th>
+				</tr>
+			</table>
+		<% end %>
+	</div>
 		<div class="field">
 			<%= link_to "お客様情報変更", edit_enduser_path(@enduser) %>
 			<%= link_to "戻る", root_path %>
